--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             </p>
                             <div class="hero-stats mb-4">
                                 <div class="stat-item">
-                                    <div class="stat-number">2+</div>
+                                    <div class="stat-number">3+</div>
                                     <div class="stat-label">Anos de Experiência</div>
                                 </div>
                                 <div class="stat-item">
@@ -141,6 +141,7 @@
                             <span class="skill-badge">JavaScript</span>
                             <span class="skill-badge">TypeScript</span>
                             <span class="skill-badge">PHP</span>
+                            <span class="skill-badge">COMPOSER</span>
                             <span class="skill-badge">Python</span>
                             <span class="skill-badge">Java</span>
                             <span class="skill-badge">React</span>
@@ -620,7 +621,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; <span id="currentYear"></span>Todos os direitos reservados.</p>
+                <p>&copy; <span id="currentYear"></span> Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
