update skills list

--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
                         <div class="skills-list">
                             <span class="skill-badge">HTML5</span>
                             <span class="skill-badge">CSS3</span>
-                            <span class="skill-badge">NODE.js</span>
+                            <span class="skill-badge">Node.js</span>
                             <span class="skill-badge">JavaScript</span>
                             <span class="skill-badge">TypeScript</span>
                             <span class="skill-badge">PHP</span>
-                            <span class="skill-badge">COMPOSER</span>
+                            <span class="skill-badge">Composer</span>
                             <span class="skill-badge">Python</span>
                             <span class="skill-badge">Java</span>
                             <span class="skill-badge">React</span>
