--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Henrique Rosa | Dev & Suporte TI</title>
+    <title>Henrique Rosa | TI</title>
     <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -61,16 +61,17 @@
                         <div class="hero-content fade-in-up">
                             <div class="hero-badge mb-3">
                                 <i class="bi bi-code-slash me-2"></i>
-                                <span>Desenvolvedor & Suporte</span>
+                                <span>Tecnologia da Informação</span>
                             </div>
                             <h1 class="hero-title mb-4">
                                 Olá, sou <br>
-                                <span class="gradient-text">Henrique Rosa da Cruz</span>
+                                <span class="gradient-text">Henrique Rosa <br>da Cruz</span>
                             </h1>
                             <p class="hero-description mb-4">
-                                Transformo ideias em soluções digitais. Focado em desenvolvimento de software e suporte
-                                técnico,
-                                busco constantemente aprender e contribuir com projetos inovadores.
+                                Atuo entre infraestrutura e desenvolvimento web,
+                                com experiência em suporte técnico N1/N2,
+                                redes,
+                                servidores e criação de soluções web aplicadas na prática.
                             </p>
                             <div class="hero-stats mb-4">
                                 <div class="stat-item">
@@ -115,98 +116,6 @@
                                 <i class="bi bi-lightbulb"></i>
                                 <span>Inovação</span>
                             </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="skills" class="section-padding">
-            <div class="container">
-                <div class="section-header text-center mb-5 fade-in-up">
-                    <span class="section-badge">Competências</span>
-                    <h2 class="section-title">Minhas Habilidades</h2>
-                </div>
-
-                <div class="skills-grid fade-in-up">
-                    <div class="skill-category">
-                        <div class="category-header">
-                            <i class="bi bi-code-slash"></i>
-                            <h3>Desenvolvimento</h3>
-                        </div>
-                        <div class="skills-list">
-                            <span class="skill-badge">HTML5</span>
-                            <span class="skill-badge">CSS3</span>
-                            <span class="skill-badge">Node.js</span>
-                            <span class="skill-badge">JavaScript</span>
-                            <span class="skill-badge">TypeScript</span>
-                            <span class="skill-badge">PHP</span>
-                            <span class="skill-badge">Composer</span>
-                            <span class="skill-badge">Python</span>
-                            <span class="skill-badge">Java</span>
-                            <span class="skill-badge">React</span>
-                        </div>
-                    </div>
-
-                    <div class="skill-category">
-                        <div class="category-header">
-                            <i class="bi bi-database"></i>
-                            <h3>Banco de Dados</h3>
-                        </div>
-                        <div class="skills-list">
-                            <span class="skill-badge">MySQL</span>
-                            <span class="skill-badge">SQL</span>
-                        </div>
-                    </div>
-
-                    <div class="skill-category">
-                        <div class="category-header">
-                            <i class="bi bi-palette"></i>
-                            <h3>Design & UI/UX</h3>
-                        </div>
-                        <div class="skills-list">
-                            <span class="skill-badge">Figma</span>
-                            <span class="skill-badge">Bootstrap</span>
-                            <span class="skill-badge">Photoshop</span>
-                            <span class="skill-badge">Webcrumbs</span>
-                            <span class="skill-badge">Pencil</span>
-                            <span class="skill-badge">Miro</span>
-                        </div>
-                    </div>
-
-                    <div class="skill-category">
-                        <div class="category-header">
-                            <i class="bi bi-server"></i>
-                            <h3>Infraestrutura & DevOps</h3>
-                        </div>
-                        <div class="skills-list">
-                            <span class="skill-badge">Linux Server</span>
-                            <span class="skill-badge">Windows Server</span>
-                            <span class="skill-badge">VM</span>
-                            <span class="skill-badge">Git/GitHub</span>
-                            <span class="skill-badge">GLPI</span>
-                        </div>
-                    </div>
-
-                    <div class="skill-category">
-                        <div class="category-header">
-                            <i class="bi bi-diagram-3"></i>
-                            <h3>Redes</h3>
-                        </div>
-                        <div class="skills-list">
-                            <span class="skill-badge">Cisco Packet Tracer</span>
-                            <span class="skill-badge">VLSM</span>
-                        </div>
-                    </div>
-
-                    <div class="skill-category">
-                        <div class="category-header">
-                            <i class="bi bi-kanban"></i>
-                            <h3>Gestão</h3>
-                        </div>
-                        <div class="skills-list">
-                            <span class="skill-badge">Notion</span>
-                            <span class="skill-badge">Agile</span>
                         </div>
                     </div>
                 </div>
@@ -445,6 +354,98 @@
                                     <i class="bi bi-box-arrow-up-right"></i>
                                 </a>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="skills" class="section-padding">
+            <div class="container">
+                <div class="section-header text-center mb-5 fade-in-up">
+                    <span class="section-badge">Competências</span>
+                    <h2 class="section-title">Minhas Habilidades</h2>
+                </div>
+
+                <div class="skills-grid fade-in-up">
+                    <div class="skill-category">
+                        <div class="category-header">
+                            <i class="bi bi-code-slash"></i>
+                            <h3>Desenvolvimento</h3>
+                        </div>
+                        <div class="skills-list">
+                            <span class="skill-badge">HTML5</span>
+                            <span class="skill-badge">CSS3</span>
+                            <span class="skill-badge">Node.js</span>
+                            <span class="skill-badge">JavaScript</span>
+                            <span class="skill-badge">TypeScript</span>
+                            <span class="skill-badge">PHP</span>
+                            <span class="skill-badge">Composer</span>
+                            <span class="skill-badge">Python</span>
+                            <span class="skill-badge">Java</span>
+                            <span class="skill-badge">React</span>
+                        </div>
+                    </div>
+
+                    <div class="skill-category">
+                        <div class="category-header">
+                            <i class="bi bi-database"></i>
+                            <h3>Banco de Dados</h3>
+                        </div>
+                        <div class="skills-list">
+                            <span class="skill-badge">MySQL</span>
+                            <span class="skill-badge">SQL</span>
+                        </div>
+                    </div>
+
+                    <div class="skill-category">
+                        <div class="category-header">
+                            <i class="bi bi-palette"></i>
+                            <h3>Design & UI/UX</h3>
+                        </div>
+                        <div class="skills-list">
+                            <span class="skill-badge">Figma</span>
+                            <span class="skill-badge">Bootstrap</span>
+                            <span class="skill-badge">Photoshop</span>
+                            <span class="skill-badge">Webcrumbs</span>
+                            <span class="skill-badge">Pencil</span>
+                            <span class="skill-badge">Miro</span>
+                        </div>
+                    </div>
+
+                    <div class="skill-category">
+                        <div class="category-header">
+                            <i class="bi bi-server"></i>
+                            <h3>Infraestrutura & DevOps</h3>
+                        </div>
+                        <div class="skills-list">
+                            <span class="skill-badge">Linux Server</span>
+                            <span class="skill-badge">Windows Server</span>
+                            <span class="skill-badge">VM</span>
+                            <span class="skill-badge">Git/GitHub</span>
+                            <span class="skill-badge">GLPI</span>
+                        </div>
+                    </div>
+
+                    <div class="skill-category">
+                        <div class="category-header">
+                            <i class="bi bi-diagram-3"></i>
+                            <h3>Redes</h3>
+                        </div>
+                        <div class="skills-list">
+                            <span class="skill-badge">Cisco Packet Tracer</span>
+                            <span class="skill-badge">VLSM</span>
+                        </div>
+                    </div>
+
+                    <div class="skill-category">
+                        <div class="category-header">
+                            <i class="bi bi-kanban"></i>
+                            <h3>Gestão</h3>
+                        </div>
+                        <div class="skills-list">
+                            <span class="skill-badge">Notion</span>
+                            <span class="skill-badge">Agile</span>
                         </div>
                     </div>
                 </div>
